# housing_price_predictor

./: README.md  pyproject.toml
.github/workflows/: test_workflow.yml
docs/source/: conf.py  index.rst
housing_price_predictor/: main.py  name.py
src/: data.xlsx  data_updated.csv  main.py
src/classes/: House.py
src/utils/: read_from_file.py  write_to_file.py
tests/: test_house.py  test_housing_price_predictor.py  test_read_from_file.py  test_write_to_file.py
